# SlideCheck

./: .replit  Pasted--Background-on-this-error-at-https-sqlalche-me-e-20-e3q8-Traceback-most-recent-call-last-Fi-1727467966535.txt  Pasted--ERROR-utils-file-processor-Error-processing-Canva-URL-403-Client-Error-Forbidden-for-url-https--1727726592586.txt  Pasted--Skip-to-content-Navigation-Menu-openai-openai-python-Code-Issues-60-Pull-requests-1-1727376534969.txt  Pasted-Caused-by-NameResolutionError-urllib3-connection-HTTPConnection-object-at-0x7f17359e89d0-Failed--1727534820757.txt  Pasted-DEBUG-app-Form-submitted-successfully-DEBUG-app-Processing-URL-https-docs-google-com-presentation-1727387760094.txt  Pasted-DEBUG-app-Form-submitted-successfully-DEBUG-app-Processing-URL-https-www-canva-com-templates-EAF4-1727530498958.txt  Pasted-DEBUG-app-Temporary-file-removed-tmp-tmpm6ejd8bd-pdf-INFO-werkzeug-172-31-196-57-28-Sep-2024--1727492637257.txt  Pasted-DEBUG-utils-file-processor-Starting-to-process-input-tmp-tmp5rx0zm5f-pdf-PDF-processing-test-passe-1727532715928.txt  Pasted-DEBUG-utils-file-processor-Starting-to-process-input-tmp-tmp6atzuchr-pdf-PDF-processing-test-passe-1727532818411.txt  Pasted-DEBUG-utils-file-processor-Starting-to-process-input-tmp-tmpbrdpjcyj-pdf-PDF-processing-test-passe-1727532424298.txt  Pasted-DEBUG-utils-file-processor-Starting-to-process-input-tmp-tmpm1rwhmxr-pdf-ERROR-utils-file-processo-1727531605801.txt  Pasted-ERROR-app-Unhandled-exception-400-Bad-Request-The-CSRF-token-is-invalid-Traceback-most-recent-ca-1727530100888.txt  README.md  app.py  (+20 more)
(+29 files in other folders)
