[tool.poetry]
name = "repl-nix-slidecheckai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
openai = "^1.7.1"
python-magic = "^0.4.27"
flask-wtf = "^1.2.1"
requests = "^2.32.3"
pymupdf = "^1.24.10"
python-pptx = "^1.0.2"
odfpy = "^1.4.1"
pypdf2 = "^3.0.1"
beautifulsoup4 = "^4.12.3"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.147.0"
pdf2image = "^1.17.0"
reportlab = "^4.2.2"
markdown = "^3.7"
weasyprint = "^62.3"
playwright = "1.42.0"
python-docx = "^1.1.2"
striprtf = "^0.0.26"
keynote-parser = "^1.13.1.0"
selenium = "4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
